# airdrop-rs

./: Cargo.toml
ether/: Cargo.toml
ether/src/: lib.rs  mnemonic_utils.rs
